Uses sticky-top rather than fixed-top for better collapsing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,11 +13,3 @@
 .badge-repos a:visited {
   color: #FFFFFF
 }
-
-.fixed-top-2 {
-  margin-top: 57px;
-}
-
-.repo-table {
-  padding-top: 111px;
-}
